packages/validator/tests/fixtures/try.ts

import TestsClass from './tests-class'

const o = new TestsClass()

o.login('john', '123456789')
