packages/errors/archived/tests/try.ts
import JsonqlCheckerError from '../src/checker-error'

const e = new JsonqlCheckerError()

console.log(JsonqlCheckerError.name)
console.log(e.className)
